# knot-resolver

./: .gitignore  .gitlab-ci.yml  .luacheckrc  .travis.yml  Makefile  NEWS  config.h.in  config.mk  meson.build  meson_options.txt
ci/: Dockerfile
daemon/: README.rst  bindings.c  daemon.mk  engine.c  engine.h  main.c  tls.c  tls.h  worker.c  worker.h
daemon/lua/: config.lua  kres-gen.lua  kres-gen.sh  trust_anchors.lua.in
doc/: Doxyfile  build.rst  conf.py  kresd.8.in  meson.build  modules.rst
lib/: cache.c  cache.h  defines.h  lib.mk  libkres.pc.in  module.c  nsrep.c  nsrep.h  resolve.c  resolve.h  rplan.c  rplan.h  utils.c  utils.h  zonecut.c
lib/cookies/: lru_cache.h
lib/layer/: cache.c  pktcache.c  rrcache.c  validate.c
modules/: modules.mk
modules/http/: http.mk
modules/kskroll-sentinel/: README.rst  kskroll-sentinel.lua  kskroll-sentinel.mk
modules/policy/: policy.lua
modules/stats/: README.rst  stats.c
modules/time_jump_detection/: README.rst  time_jump_detection.lua  time_jump_detection.mk
modules/version/: version.lua  version_test.lua
scripts/: Dockerfile  bootstrap-depends.sh  embed-lua.sh  fake_luajit  objdump_soname  otool_soname
tests/config/: runtest.sh  test_config.mk
